<resources>
    <string name="app_name">cobaPPLJ</string>
    <string name="launch_text">D A N</string>
    <string name="menu_home">Home</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_history">History</string>
    <string name="menu_setting">Setting</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="menu_fragment">Menu Fragment</string>
    <string name="history_fragment">History Fragment</string>
    <string name="setting_fragment">Setting Fragment</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="login_register_text">Don\'t have an account? Register Here</string>
    <string name="register_login_text">Already have an account? Login Here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>